<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_volunteer"
    app:startDestination="@id/volunteerHomeFragment">

    <fragment
        android:id="@+id/volunteerHomeFragment"
        android:name="org.piramalswasthya.stoptb.ui.volunteer.fragment.VolunteerHomeFragment"
        android:label="Home">
        <action
            android:id="@+id/action_volunteerHomeFragment_to_newBenRegFragment"
            app:destination="@id/newBenRegFragment" />
        <action
            android:id="@+id/action_volunteerHomeFragment_to_tbFragment"
            app:destination="@id/tbFragment" />
        <action
            android:id="@+id/action_volunteerHomeFragment_to_ncdFragment"
            app:destination="@id/ncdFragment" />
        <action
            android:id="@+id/action_volunteerHomeFragment_to_ncdReferredListFragment"
            app:destination="@id/ncdRefferedList" />
        <action
            android:id="@+id/action_volunteerHomeFragment_to_referralIconsFragment"
            app:destination="@id/referralIconsFragment" />
        <action
            android:id="@+id/action_volunteerHomeFragment_to_allBenFragment"
            app:destination="@id/allBenFragment" />
        <action
            android:id="@+id/action_volunteerHomeFragment_to_allHouseholdFragment"
            app:destination="@id/allHouseholdFragment" />
    </fragment>

    <fragment
        android:id="@+id/allHouseholdFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.all_household.AllHouseholdFragment"
        android:label="@string/icon_title_household">
        <action
            android:id="@+id/action_allHouseholdFragment_to_newHouseholdFragment"
            app:destination="@id/newHouseholdFragment" />
        <action
            android:id="@+id/action_allHouseholdFragment_to_householdMembersFragment"
            app:destination="@id/householdMembersFragment" />
        <action
            android:id="@+id/action_allHouseholdFragment_to_newBenRegFragment"
            app:destination="@id/newBenRegFragment" />
    </fragment>

    <fragment
        android:id="@+id/newHouseholdFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.new_household_registration.NewHouseholdFragment"
        android:label="@string/icon_title_household">
        <argument
            android:name="hhId"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="isAshaFamily"
            android:defaultValue="No"
            app:argType="string" />
        <action
            android:id="@+id/action_newHouseholdFragment_to_newBenRegFragment"
            app:destination="@id/newBenRegFragment" />
    </fragment>

    <fragment
        android:id="@+id/householdMembersFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.household_members.HouseholdMembersFragment"
        android:label="@string/household_members">
        <argument
            android:name="hhId"
            app:argType="long" />
        <action
            android:id="@+id/action_householdMembersFragment_to_newBenRegFragment"
            app:destination="@id/newBenRegFragment" />
    </fragment>

    <fragment
        android:id="@+id/referralIconsFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.home.ReferralIconsFragment"
        android:label="@string/ncd_refer_list"
        tools:layout="@layout/rv_icon_grid">
        <action
            android:id="@+id/action_referralIconsFragment_to_ncdRefferedList"
            app:destination="@id/ncdRefferedList" />
        <action
            android:id="@+id/action_referralIconsFragment_to_allBenFragment"
            app:destination="@id/allBenFragment" />
    </fragment>

    <fragment
        android:id="@+id/newBenRegFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.all_ben.new_ben_registration.ben_form.NewBenRegFragment"
        android:label="New Beneficiary">
        <argument android:name="hhId" app:argType="long" android:defaultValue="0L" />
        <argument android:name="relToHeadId" app:argType="integer" android:defaultValue="18" />
        <argument android:name="gender" app:argType="integer" android:defaultValue="0" />
        <argument android:name="benId" app:argType="long" android:defaultValue="0L" />
        <argument android:name="selectedBenId" app:argType="long" android:defaultValue="0L" />
        <argument android:name="isAddSpouse" app:argType="integer" android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/anthropometryFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.all_ben.new_ben_registration.anthropometry.AnthropometryFragment"
        android:label="@string/anthropometry_screen"
        tools:layout="@layout/fragment_anthropometry">
        <argument android:name="benId" app:argType="long" />
        <argument
            android:name="autoFlow"
            android:defaultValue="true"
            app:argType="boolean" />
    </fragment>

    <!-- TB -->
    <fragment
        android:id="@+id/tbFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.communicable_diseases.CdFragment"
        android:label="TB">
        <action
            android:id="@+id/action_cdFragment_to_TBScreeningListFragment"
            app:destination="@id/TBScreeningListFragment" />
        <action
            android:id="@+id/action_cdFragment_to_TBSuspectedListFragment"
            app:destination="@id/TBSuspectedListFragment" />
        <action
            android:id="@+id/action_cdFragment_to_TBConfirmedListFragment"
            app:destination="@id/TBConfirmedListFragment" />
    </fragment>

    <fragment
        android:id="@+id/TBScreeningListFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.tb_screening.list.TBScreeningListFragment"
        android:label="TB Screening">
        <action
            android:id="@+id/action_TBScreeningListFragment_to_TBScreeningFormFragment"
            app:destination="@id/TBScreeningFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/TBScreeningFormFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.tb_screening.form.TBScreeningFormFragment"
        android:label="TB Screening Form">
        <argument android:name="benId" app:argType="long" />
        <argument
            android:name="viewOnly"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="autoFlow"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="syncImmediately"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/action_TBScreeningFormFragment_to_ncdReferForm"
            app:destination="@id/NCDReferalForm" />
    </fragment>

    <fragment
        android:id="@+id/GeneralOpdFormFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.general_opd.GeneralOpdFormFragment"
        android:label="@string/general_opd">
        <argument android:name="benId" app:argType="long" />
        <argument
            android:name="viewOnly"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="autoFlow"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="generalOpdFlow"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/TBSuspectedListFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.tb_suspected.list.TBSuspectedListFragment"
        android:label="TB Suspected">
        <action
            android:id="@+id/action_TBSuspectedListFragment_to_TBSuspectedFragment"
            app:destination="@id/TBSuspectedFragment" />
    </fragment>

    <fragment
        android:id="@+id/TBSuspectedFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.tb_suspected.form.TBSuspectedFragment"
        android:label="TB Suspected Form">
        <argument android:name="benId" app:argType="long" />
        <argument
            android:name="viewOnly"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="autoFlow"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/TBConfirmedListFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.tb_confirmed.list.TBConfirmedListFragment"
        android:label="TB Confirmed">
        <action
            android:id="@+id/action_TBConfirmedListFragment_to_TBConfirmedFormFragment"
            app:destination="@id/TBConfirmedFormFragment" />
        <action
            android:id="@+id/action_TBConfirmedListFragment_to_householdMembersFragment"
            app:destination="@id/householdMembersFragment" />
    </fragment>

    <fragment
        android:id="@+id/TBConfirmedFormFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.tb_confirmed.from.TBConfirmedFormFragment"
        android:label="TB Confirmed Form">
        <argument android:name="benId" app:argType="long" />
    </fragment>

    <!-- NCD -->
    <fragment
        android:id="@+id/ncdFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.NcdFragment"
        android:label="NCD">
        <action
            android:id="@+id/action_ncdFragment_to_ncdEligibleListFragment"
            app:destination="@id/ncdEligibleListFragment" />
        <action
            android:id="@+id/action_ncdFragment_to_ncdNonEligibleListFragment"
            app:destination="@id/ncdNonEligibleListFragment" />
        <action
            android:id="@+id/action_ncdFragment_to_ncdPriorityListFragment"
            app:destination="@id/ncdPriorityListFragment" />
        <action
            android:id="@+id/action_ncdFragment_to_ncdReferredListFragment"
            app:destination="@id/ncdRefferedList" />
    </fragment>

    <fragment
        android:id="@+id/ncdEligibleListFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.ncd_eligible_list.NcdEligibleListFragment"
        android:label="NCD Eligible">
        <action
            android:id="@+id/action_ncdEligibleListFragment_to_cbacFragment"
            app:destination="@id/cbacFragment" />
    </fragment>

    <fragment
        android:id="@+id/cbacFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.cbac.CbacFragment"
        android:label="CBAC Form">
        <argument android:name="benId" android:defaultValue="0L" app:argType="long" />
        <argument android:name="cbacId" android:defaultValue="0" app:argType="integer" />
        <argument android:name="ashaId" android:defaultValue="0" app:argType="integer" />
        <action
            android:id="@+id/action_cbacFragment_to_ncdReferForm"
            app:destination="@id/NCDReferalForm" />
    </fragment>

    <fragment
        android:id="@+id/ncdNonEligibleListFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.ncd_non_eligible_list.NcdNonEligibleListFragment"
        android:label="NCD Non Eligible" />

    <fragment
        android:id="@+id/ncdPriorityListFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.ncd_priority_list.NcdPriorityListFragment"
        android:label="NCD Priority" />

    <fragment
        android:id="@+id/ncdRefferedList"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.ncd_referred.list.NcdRefferedList"
        android:label="NCD Referred">
        <action
            android:id="@+id/action_ncdRefferedList_to_NCDReferalFormFragment"
            app:destination="@id/NCDReferalFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/NCDReferalForm"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.ncd_referred.form.NCDReferalFormFragment"
        android:label="NCD Refer Form">
        <argument android:name="benId" app:argType="long" />
        <argument android:name="referral" app:argType="string" />
        <argument android:name="referralType" app:argType="string" />
        <argument android:name="cbacId" android:defaultValue="0" app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/NCDReferalFormFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.ncd_referred.followUp.NCDReferalFormFragment"
        android:label="NCD Refer Follow Up">
        <argument android:name="benId" app:argType="long" />
        <argument android:name="hhId" app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/allBenFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.all_ben.AllBenFragment"
        android:label="Beneficiary List">
        <action
            android:id="@+id/action_allBenFragment_to_newBenRegFragment"
            app:destination="@id/newBenRegFragment" />
        <action
            android:id="@+id/action_allBenFragment_to_newChildAsBenRegistrationFragment"
            app:destination="@id/newChildAsBenRegistrationFragment" />
        <action
            android:id="@+id/action_allBenFragment_to_vitalScreenFragment"
            app:destination="@id/vitalScreenFragment" />
        <action
            android:id="@+id/action_allBenFragment_to_TBSuspectedQuickFragment"
            app:destination="@id/TBSuspectedQuickFragment" />

        <argument
            android:name="source"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/vitalScreenFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.vital_screen.VitalScreenFragment"
        android:label="@string/vital_screen"
        tools:layout="@layout/fragment_vital_screen">
        <argument
            android:name="benId"
            app:argType="long" />
        <argument
            android:name="benRegId"
            app:argType="long" />
        <argument
            android:name="autoFlow"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/action_vitalScreenFragment_to_TBSuspectedQuickFragment"
            app:destination="@id/TBSuspectedQuickFragment" />
    </fragment>

    <fragment
        android:id="@+id/TBSuspectedQuickFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.non_communicable_diseases.tb_suspected.quick.TBSuspectedQuickFragment"
        tools:layout="@layout/fragment_tb_suspected_quick">
        <argument
            android:name="benId"
            app:argType="long" />
        <argument
            android:name="viewOnly"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="autoFlow"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="generalOpdFlow"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/newChildAsBenRegistrationFragment"
        android:name="org.piramalswasthya.stoptb.ui.home_activity.all_ben.new_ben_registration.new_child_ben.NewChildAsBenRegistrationFragment"
        android:label="New Child Ben Registration">
        <argument android:name="hhId" app:argType="long" />
        <argument android:name="relToHeadId" app:argType="integer" />
        <argument android:name="benId" android:defaultValue="0L" app:argType="long" />
        <argument android:name="selectedBenId" android:defaultValue="0L" app:argType="long" />
        <argument android:name="gender" android:defaultValue="0" app:argType="integer" />
        <argument android:name="isAddSpouse" android:defaultValue="0" app:argType="integer" />
    </fragment>

</navigation>
